--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "test": "npm-run-all --print-label --parallel lint:*",
     "lint:md": "remark . --frail",
     "lint:js": "eslint . --cache",
-    "lint:sensitive": "ban",
-    "lint:travis": "travis-lint .travis.yml"
+    "lint:sensitive": "ban"
   },
   "devDependencies": {
     "@travi/eslint-config": "1.0.56",
@@ -28,8 +27,7 @@
     "husky": "4.3.0",
     "npm-run-all": "4.1.5",
     "remark-cli": "9.0.0",
-    "remark-preset-lint-travi": "1.3.11",
-    "travis-lint": "1.0.0"
+    "remark-preset-lint-travi": "1.3.11"
   },
   "dependencies": {
     "@form8ion/eslint-config-cypress": "1.3.18"
