--- a/package.json
+++ b/package.json
@@ -3,21 +3,27 @@
   "description": "Shareable config for ESLint for projects that use Cypress",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
-  "files": [
-    "index.js"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
   "repository": "travi/eslint-config-cypress",
   "bugs": "https://github.com/travi/eslint-config-cypress/issues",
   "homepage": "https://npm.im/@travi/eslint-config-cypress",
-  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
   "scripts": {
     "test": "npm-run-all --print-label --parallel lint:*",
     "lint:md": "remark . --frail",
     "lint:js": "eslint . --cache",
-    "lint:sensitive": "ban"
+    "lint:sensitive": "ban",
+    "prepare": "husky install",
+    "lint:publish": "publint --strict"
+  },
+  "files": [
+    "index.js"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
+  "dependencies": {
+    "@form8ion/eslint-config-cypress": "1.3.35"
   },
   "devDependencies": {
     "@travi/eslint-config": "3.0.36",
@@ -26,10 +32,8 @@
     "cz-conventional-changelog": "3.3.0",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
+    "publint": "0.2.0",
     "remark-cli": "11.0.0",
     "remark-preset-lint-travi": "6.0.0"
-  },
-  "dependencies": {
-    "@form8ion/eslint-config-cypress": "1.3.35"
   }
 }
